--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <p class="words line1">Hello there,</p>
                     <p class="words line2">You're the CSS to my HTML!</p>
                     <p class="words line3">Love,</p>
-                    <p class="words line4">Katrina</p>
+                    <p class="words line4">Meet</p>
                 </div>
                 <div class="hearts">
                     <div class="heart a1"></div>
@@ -29,7 +29,7 @@
             <button id="open">Open</button>
             <button id="reset">Reset</button>
         </div>
-        <h1 class="valentine">Happy Valentine's Day!</h1>
+        <h1 class="valentine">Happy Propose Day!</h1>
         <script src="index.js"></script>
     </body>
 </html>
