--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <div class="front flap"></div>
                 <div class="front pocket"></div>
                 <div class="letter">
-                    <p class="words line1">Hello there,</p>
-                    <p class="words line2">You're the CSS to my HTML!</p>
-                    <p class="words line3">Love,</p>
+                    <p class="words line1">Hii Baby,</p>
+                    <p class="words line2">I am sorry if i hurt you.Will you be my Valentine?</p>
+                    <p class="words line3">I Love You❤️</p>
                     <p class="words line4">Meet</p>
                 </div>
                 <div class="hearts">
