--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <p class="words line1">Hii Baby,</p>
                     <p class="words line2">I am sorry if i hurt you.Will you be my Valentine?</p>
                     <p class="words line3">I Love You❤️</p>
-                    <p class="words line4">Meet</p>
+                    <p class="words line4">Manu</p>
                 </div>
                 <div class="hearts">
                     <div class="heart a1"></div>
