--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="index.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-        <title>Virtual Valentine's Day Card</title>
+        <title>Sending Virtual Love</title>
     </head>
     <body>
+         <p class="valentine">Happy Propose Day!</p>
         <div class="envelope-wrapper">
             <div id="envelope" class="close">
                 <div class="front flap"></div>
                 <div class="front pocket"></div>
                 <div class="letter">
                     <p class="words line1">Hii Baby,</p>
-                    <p class="words line2">I am sorry if i hurt you.Will you be my Valentine?</p>
+                    <p class="words line2">I am sorry if i hurt you.Will you be my Soulmate?</p>
                     <p class="words line3">I Love You❤️</p>
                     <p class="words line4">Manu</p>
                 </div>
@@ -29,7 +30,7 @@
             <button id="open">Open</button>
             <button id="reset">Reset</button>
         </div>
-        <h1 class="valentine">Happy Propose Day!</h1>
+       
         <script src="index.js"></script>
     </body>
 </html>
