--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="index.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-        <title>Sending Virtual Love</title>
+        <title>Sending Virtual Message</title>
     </head>
     <body>
-         <p class="valentine">Happy Propose Day!</p>
+         <p class="valentine">Happy !</p>
         <div class="envelope-wrapper">
             <div id="envelope" class="close">
                 <div class="front flap"></div>
                 <div class="front pocket"></div>
                 <div class="letter">
-                    <p class="words line1">Hii Baby,</p>
-                    <p class="words line2">I am sorry if i hurt you.Will you be my Soulmate?</p>
-                    <p class="words line3">I Love You❤️</p>
+                    <p class="words line1">Hii,</p>
+                    <p class="words line2">How are you ?</p>
+                    <p class="words line3">.....</p>
                     <p class="words line4">Manu</p>
                 </div>
                 <div class="hearts">
